crates/openrouter-macros/tests/ui/parse__missing_comma.stderr
error: expected `,`
 --> tests/ui/parse__missing_comma.rs:3:21
  |
3 | const MODEL: &str = model_supports!("qwen/qwen3.7-max");
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `model_supports` (in Nightly builds, run with -Z macro-backtrace for more info)
